--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     const fileList = [
-        "ABQ_artwork.geojson",
+        "ABQ_Artwork.geojson",
         "ABQ_points.geojson",
         "AllSpecialZones.geojson",
         "AllSpecialZones_Chililigrant.geojson",
