--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ L.control.scale().addTo(map);
 
 
     const fileList = [
+        "canvassed.geojson",
         "ABQ_points.geojson",
         "AllSpecialZones.geojson",
         "AllSpecialZones_Chililigrant.geojson",
