--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ L.control.scale().addTo(map);
 
 
     const fileList = [
-        "canvassed.geojson",
+        "canvassed_art_points.geojson",
         "ABQ_points.geojson",
         "AllSpecialZones.geojson",
         "AllSpecialZones_Chililigrant.geojson",
