--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ fileList.forEach(filename => {
     const url = repoBase + encodeURIComponent(filename);
     const layerName = filename.replace(".geojson", "").replace(/_/g, " ");
 const defaultLayers = [
-    "canvassed artwork all",             // This matches "canvassed_artwork_all.geojson"
+    "canvassed art points",             // This matches "canvassed_art_points.geojson"
     "CanvassedArtwork MultipleRingBuffer1"  // This matches "CanvassedArtwork_MultipleRingBuffer1.geojson"
 ];
 
